[profile.dev]
panic = "abort"
lto = true
opt-level = "s"


[package]
name = "arduino-uno-rust"
# edition = "2021"
# rust-version = "1.75"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "f6b79dc"
features = ["arduino-uno"]